used multer to upload images to the server & created routes to fetch all data from the db

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# images uploaded to server
+/public/article_images
+
 # nyc test coverage
 .nyc_output
 
