--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node ./app.js",
     "start:dev": "nodemon ./app.js"
   },
@@ -21,6 +21,7 @@
     "g": "^2.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
@@ -29,6 +30,7 @@
     "sequelize-cli": "^5.3.0"
   },
   "devDependencies": {
+    "jest": "^23.6.0",
     "nodemon": "^1.18.5"
   }
 }
