--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.12",
     "sequelize": "^4.41.0",
-    "sequelize-cli": "^5.3.0"
+    "sequelize-cli": "^5.3.0",
+    "sequelize-typescript": "^0.6.6",
+    "showdown": "^1.9.0"
   },
   "devDependencies": {
     "jest": "^23.6.0",
