--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "buhasior-local-news",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "node ./app.js",
-    "start:dev": "nodemon ./app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js --exec \"npm run lint && node\"",
+    "lint": "eslint ./**/*.js"
   },
   "author": "Ronald Buhasio",
   "license": "ISC",
@@ -22,7 +23,6 @@
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -33,7 +33,11 @@
     "showdown": "^1.9.0"
   },
   "devDependencies": {
+    "eslint": "4.18.2",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-prettier": "2.6.0",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "prettier": "^1.15.3"
   }
 }
