--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest \".*\\.test\\.js\" --runInBand",
     "start": "node app.js",
     "start:dev": "nodemon app.js --exec \"npm run lint && node\"",
     "lint": "eslint ./**/*.js"
@@ -19,11 +19,13 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "g": "^2.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql2": "^1.6.4",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
@@ -38,6 +40,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.5",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "supertest": "^3.3.0"
   }
 }
