--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "buhasior-local-news",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
+  "author": "Ronald Buhasio",
   "scripts": {
-    "test": "jest \".*\\.test\\.js\" --runInBand",
-    "start": "node app.js",
-    "start:dev": "nodemon app.js --exec \"npm run lint && node\"",
+    "test": "jest --runInBand --detectOpenHandles --coverage",
+    "start": "node ./server.js",
+    "start:dev": "nodemon ./server.js --exec \"npm run lint && node\"",
     "lint": "eslint ./**/*.js"
   },
-  "author": "Ronald Buhasio",
-  "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
@@ -39,8 +38,16 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-prettier": "2.6.0",
     "jest": "^23.6.0",
+    "jest-express": "^1.9.0",
     "nodemon": "^1.18.5",
     "prettier": "^1.15.3",
     "supertest": "^3.3.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   }
 }
