--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "supertest": "^3.3.0",
     "testcafe": "^0.23.2"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "jest": {
     "roots": [
       "<rootDir>/routes/__tests__/"
